<resources>
    <string name="app_name">Restaurant</string>
    <string name="version">version</string>
    <string name="loading">loading...</string>
    <string name="company">NguyenThacTung.utc</string>
    <string name="email">Email</string>
    <string name="MatKhau">Mật khẩu</string>
    <string name="DangNhap">Đăng nhập</string>
    <string name="Hoac">hoặc</string>
    <string name="facebook_app_id">1589721984440429</string>
    <string name="quenMatKhau">Quên mật khẩu?</string>
    <string name="DangKy"><u>Đăng ký</u></string>
    <string name="NhapLaiPass">Nhập lại mật khẩu</string>
    <string name="VuiLongNhap">Vui lòng nhập</string>
    <string name="KhongHopLe">Không hợp lệ</string>
    <string name="success">success</string>
    <string name="VuiLongCho">Vui lòng chờ</string>
    <string name="TaiKhoanKhongHopLe">Tài khoản không hợp lệ</string>
    <string name="EmailKhongHopLe">Email không hợp lệ</string>
    <string name="KhoiPhucMatKhau">Khôi phục mật khẩu</string>
    <string name="ChuoiKhoiPhucMatKhau">Bạn vui lòng nhập email bên dưới để khôi phục mật khẩu</string>
    <string name="GuiEmail">Gửi Email</string>
    <string name="BanKhongPhaiLaThanhVien">Bạn không phải là thành viên?</string>
    <string name="VuiLongKiemTraEmail">vui lòng kiểm tra email để đổi mật khẩu</string>
    <string name="ODau">Ở đâu</string>
    <string name="AnGi">Ăn gì</string>
    <string name="MoiNhat">Mới nhất</string>
    <string name="DanhMuc">Danh mục</string>
    <string name="KhuVuc">Khu vực</string>
    <string name="Gantoi">Gần tôi</string>
    <string name="Blog">Blogs</string>
    <string name="GiaoHang">Giao hàng</string>
    <string name="GameandFun">Game and fun</string>
    <string name="DanhGia">Đánh giá</string>
    <string name="TopThanhVien">Top thành viên</string>
    <string name="Datmon">Đặt món</string>
    <string name="batGPS">Bạn hãy mở GPS </string>
    <string name="TaiAnh">Tải ảnh </string>
    <string name="LuuLai">Lưu lại</string>
    <string name="BinhLuan">Bình luận</string>
    <string name="Checkin">Check-in</string>
    <string name="ChiaSe">Chia sẻ</string>
    <string name="ThongBao">Thông báo</string>
    <string name="DangMoCua">Đang Mở Cửa</string>
    <string name="DaDongCua">Đã Đóng cửa</string>
    <string name="DanhSachChiNhanh">Danh sách chi nhánh:</string>
    <string name="ChiNhanhGanNhat">Chi nhánh gần nhất:</string>
    <string name="CapNhatWifi">Cập nhật wifi</string>
    <string name="NhapTenWifi">Nhập tên wif</string>
    <string name="NhapMatKhauWifi">Nhập mật khẩu wifi</string>
    <string name="CapNhat">Cập nhật</string>
    <string name="LoiCapNhatWifi">Vui lòng nhập đầy đủ thông tin </string>
    <string name="ViTriHienTai">Vị trí hiện tại</string>
    <string name="Dang">Đăng</string>
    <string name="TieuDeBL">Tiêu đề (không bắt buộc)</string>
    <string name="NoiDungBL">Viết trên 100 từ , đúng chính tả , ngôn ngữ văn hóa ,không spam...để được duyệt điểm thưởng</string>
    <string name="VietBinhLuan">Viết bình luận</string>
    <string name="ThucDon">Thực đơn</string>
    <string name="TenQuan">Tên quán ăn</string>
    <string name="GiaToiDa">Giá tối đa</string>
    <string name="GiaToiThieu">Giá tối thiểu</string>
    <string name="KhongGiaoHang">Không giao hàng</string>
    <string name="GioMoCua">Giờ mở cửa</string>
    <string name="GioDongCua">Giờ đóng cửa</string>
    <string name="ChiNhanh">Chi nhánh</string>
    <string name="ThemThucDon">Thêm thực đơn</string>
    <string name="ThemQuanAn">Thêm quán ăn</string>
    <string name="QuanAn">Quán ăn</string>
    <string name="TenMon">Tên món</string>
    <string name="GiaTien">Giá Tiền</string>
    <string name="NhapTenMon">Vui lòng nhập tên món</string>
    <string name="NhapGiatien">Vui lòng nhập giá tiền</string>
    <string name="ChamDiem">Chấm điểm bình luận</string>

    <string name="title_activity_fullscreen_">Fullscreen_Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CoVideo">Có video trailer</string>
    <string name="KhongVideo">Không video trailer</string>
    <string name="TaiHinhAnh">Tải binh luận hoàn tất</string>
    <string name="TaiHinh">Đang tải bình luận... </string>
    <string name="DanhSachQuanDaDang">Danh sách quán đã đăng</string>
    <string name="HoTen">Họ và tên</string>
    <string name="DanhSachQuanDaLuu">Danh sách quán đã lưu</string>
    <string name="DongY">Đồng ý</string>
    <string name="KhongDongY">Không đồng ý</string>
    <string name="XoaQuan">Bạn có chắc muốn xóa quán ăn?</string>
    <string name="DangXuat">Đăng xuất</string>
    <string name="HinhAnh">Hình ảnh</string>
    <string name="ChinhSua">Chỉnh sửa</string>
    <string name="LuuQuan">Bạn có muốn lưu quán?</string>
    <string name="QuanDaLuu">Quán đã lưu trước đó</string>
    <string name="ChamDiemQA">Chấm điểm </string>
    <string name="Sua">Sửa</string>
    <string name="Xoa">Xóa</string>
    <string name="ThongTinCaNhan">Thông tin cá nhân</string>
    <string name="SuaQuan">Bạn có muốn sửa quán đã đăng?</string>
    <string name="SuaQuanAn">Sửa quán ăn </string>
    <string name="XoaChiNhanh">Bạn có chắc muốn xóa chi nhanh?</string>
    <string name="DanhSachThucDon">Danh sách thực đơn</string>
    <string name="ThongBaoThemQA">Đang thêm quán ăn(sẽ chậm hơn nếu bạn đăng video trailer)...</string>
    <string name="XoaHinh">Bạn có chắc muốn xóa hình ảnh quán ăn?</string>
    <string name="XoaThucDon">Bạn có chắc muốn xóa món ăn trong thực đơn này?</string>
    <string name="ThongBaoSuaQuan">Đang sửa quán ăn...</string>
    <string name="TimKiem">Tìm kiếm</string>
    <string name="TatCa">Tất cả</string>
    <string name="TongTien">Tổng tiền</string>
    <string name="TimKiemTenquan">Tìm kiếm tên quán ăn</string>
    <string name="DanhSachWifi">Danh sách wifi </string>
    <string name="Thoat">Thoát</string>
    <string name="themthucdon">Bạn phải thêm thực đơn cho quán ăn</string>
    <string name="checkmatkhau"><![CDATA[Mật khẩu không được < 6 ký]]></string>
    <string name="cannot_server">Cannot send verifycation email</string>
</resources>
