<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="vn.myclass.restaurant.View.PopupCapNhatWifi">
    <EditText
        android:id="@+id/edtNhapTenWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NhapTenWifi"/>
    <EditText
        android:id="@+id/edtNhapMatkhauWifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NhapMatKhauWifi"/>
    <Button
        android:id="@+id/btnCapnhatWifipopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CapNhat"/>

</LinearLayout>
